Flesh out DESCRIPTION file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,29 @@
 Package: spatiotemporaldynamics
-Title: Document data visualisation and GAM fitting for chickpea Ascochyta blight
+Title: Spatiotemporal dynamics of chickpea ascochyta blight spread in the paddock
 Version: 0.0.0.9000
-Authors@R: 
+Authors@R: c(
     person(given = "Ihanul",
            family = "Khaliq",
            role = c("aut", "cre"),
-           email = "Ihsan.Khaliq@usq.edu.au")
+           email = "Ihsan.Khaliq@usq.edu.au"),
+    person(given = "Adam H.",
+           family = "Sparks",
+           role = c("aut", "ccp"),
+           email = "Adam.Sparks@dpird.wa.gov.au",
+           comment = c(ORCID = "0000-0002-0061-8359")),
+    person(given = "Grains Research and Development Corporation",
+           role = c("fnd", "cph"),
+           comment = "Provided support through funding GRDC Project
+           USQ1907-003RTX"),
+    person(given = "Western Australia Agriculture Authority",
+           comment = "Provided support through Adam Sparks' time.",
+           role = c("fnd", "cph")),
+    person(given = "University of Southern Queensland", role = "cph"))
 Description: Research compendium documenting data visualisation and generalised
             additive model (GAM) fitting for the spatiotemporal dynamics of
-            chickpea Ascochyta blight spread.
+            chickpea Ascochyta blight spread in the paddock from research
+            studies conducted in Queensland, AU during the 2020 winter 
+            cropping season.
 License: MIT + file LICENSE
 Encoding: UTF-8
 RoxygenNote: 7.1.1
