Copy test for circular averaging function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,5 +45,7 @@ Suggests:
     rmarkdown,
     showtext,
     tidyverse,
-    viridis
+    viridis,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
