--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,8 @@
-pandoc: 2.11.2
+pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
-  Data_visualisation: Data_visualisation.html
-  Spatiotemporal_development_GAMs: Spatiotemporal_development_GAMs.html
-last_built: 2021-03-13T10:52Z
+  Fit GLMMs: Fit GLMMs.html
+  Visualise data: Visualise data.html
+last_built: 2021-05-17T00:35Z
 
