--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: spatiotemporaldynamics
-Title: Spatiotemporal dynamics of chickpea ascochyta blight spread in the paddock
+Title: Spatiotemporal dynamics of chickpea ascochyta blight in chickpea 
 Version: 1.0.0
 Authors@R: c(
     person(given = "Ihanul",
@@ -12,8 +12,8 @@ Authors@R: c(
            USQ1903-003RTX"),
     person(given = "University of Southern Queensland", role = "cph"))
 Description: Research compendium documenting data visualisation and generalised
-            additive model (GAM) fitting for the spatiotemporal dynamics of
-            chickpea Ascochyta blight spread in the paddock from research
+            linear mixed models fitting to determine the spatiotemporal dynamics of
+            chickpea Ascochyta blight in chickpea from primary infection foci in
             studies conducted in Queensland, AU during the 2020 winter 
             cropping season.
 License: MIT + file LICENSE
