--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,15 +22,20 @@ RoxygenNote: 7.1.1
 Depends: 
     R (>= 2.10)
 Suggests: 
-    broom,
+    DHARMa,
     cowplot,
+    glmmTMB,
+    ggeffects,
+    gridExtra,
     clifro,
     dplyr,
     extrafont,
     ggplot2,
     ggpubr,
+    SDMTools,
     here,
     knitr,
+    performance,
     lubridate,
     mgcv,
     readxl,
@@ -38,6 +43,7 @@ Suggests:
     showtext,
     tidyverse,
     viridis,
-    testthat (>= 3.0.0)
+    patchwork,
+    classInt
 VignetteBuilder: knitr
 Config/testthat/edition: 3
